--- a/frontend/src/components/styles/program.css
+++ b/frontend/src/components/styles/program.css
@@ -7,13 +7,34 @@
   transition: 0.3s;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
+
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding in columns */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
   padding: 30px;
+  text-align: center;
+  background-color: #f1f1f1;
 }
 
 /* Add rounded corners to the top left and the top right corner of the image */
@@ -29,4 +50,13 @@ img {
 /* Add some padding inside the card container */
 .card-body {
   padding: 2px 16px;
+}
+
+/* Responsive columns - one column layout (vertical) on small screens */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
 }
