--- a/frontend/src/components/styles/program.css
+++ b/frontend/src/components/styles/program.css
@@ -27,7 +27,6 @@
   clear: both;
 }
 
-
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -35,11 +34,20 @@
   padding: 30px;
   text-align: center;
   background-color: #f1f1f1;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Add rounded corners to the top left and the top right corner of the image */
-img {
+.card-img {
+  float: left;
   border-radius: 5px 5px 0 0;
+  padding: 0 10px;
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+  max-height: 300px;
+  
 }
 
 /* On mouse-over, add a deeper shadow */
@@ -50,6 +58,20 @@ img {
 /* Add some padding inside the card container */
 .card-body {
   padding: 2px 16px;
+  width: 10px;
+  height: 10px;
+}
+
+.card-actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  box-shadow: 0 1px 2px 0 rgba(237, 205, 205, 0.2);
+  transition: 0.3s;
+  border-radius: 1px; /* 1px rounded corners */
+  padding: 3px;
+  text-align: center;
+  background-color: #f1f1f1;
 }
 
 /* Responsive columns - one column layout (vertical) on small screens */
