--- a/frontend/src/components/styles/program.css
+++ b/frontend/src/components/styles/program.css
@@ -1,65 +1,41 @@
+.page {
+  margin: 50px;
+}
 .error {
   color: red;
 }
-.cards {
-  /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+h1, h3 {
+  text-align: center;
+}
+div.card {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 300px;
+  height: 350px;
 }
 
-/* Float four columns side by side */
-.column {
-  float: left;
-  width: 25%;
-  padding: 0 10px;
+div.card:hover {
+  border: 1px solid #777;
+}
+
+div.card img {
+  width: 100%;
+  height: 200px;
+}
+
+div.card p {
+  text-align: center;
 }
 
 /* Remove extra left and right margins, due to padding in columns */
-.row {margin: 0 -5px;}
+.row {margin: 20px;}
 
 /* Clear floats after the columns */
 .row:after {
   content: "";
   display: table;
   clear: both;
-}
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  border-radius: 5px; /* 5px rounded corners */
-  padding: 30px;
-  text-align: center;
-  background-color: #f1f1f1;
-  display: flex;
-  flex-direction: column;
-}
-
-/* Add rounded corners to the top left and the top right corner of the image */
-.card-img {
-  float: left;
-  border-radius: 5px 5px 0 0;
-  padding: 0 10px;
-  width: 100%;
-  max-width: 300px;
-  height: auto;
-  max-height: 300px;
-  
-}
-
-/* On mouse-over, add a deeper shadow */
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-/* Add some padding inside the card container */
-.card-body {
-  padding: 2px 16px;
-  width: 10px;
-  height: 10px;
 }
 
 .card-actions {
@@ -78,7 +54,6 @@
 @media screen and (max-width: 600px) {
   .column {
     width: 100%;
-    display: block;
     margin-bottom: 20px;
   }
 }
