--- a/frontend/src/components/styles/list.css
+++ b/frontend/src/components/styles/list.css
@@ -1,18 +1,19 @@
 .page {
-  margin: 50px;
+  margin: 20px;
 }
 .error {
   color: red;
 }
-h1, h3 {
+h1, h3, button {
   text-align: center;
 }
+
 div.card {
-  margin: 5px;
   border: 1px solid #ccc;
   float: left;
   width: 300px;
-  height: 350px;
+  height: 400px;
+  margin: 10px;
 }
 
 div.card:hover {
@@ -24,30 +25,24 @@ div.card img {
   height: 200px;
 }
 
-div.card p {
+div.card-info {
+  margin: 10px;
   text-align: center;
 }
 
-/* Remove extra left and right margins, due to padding in columns */
-.row {margin: 20px;}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+div.card-info p {
+  text-align: left;
 }
 
 .card-actions {
+  padding: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   box-shadow: 0 1px 2px 0 rgba(237, 205, 205, 0.2);
   transition: 0.3s;
   border-radius: 1px; /* 1px rounded corners */
-  padding: 3px;
   text-align: center;
-  background-color: #f1f1f1;
 }
 
 /* Responsive columns - one column layout (vertical) on small screens */
