--- a/frontend/src/components/styles/list.css
+++ b/frontend/src/components/styles/list.css
@@ -1,19 +1,26 @@
 .page {
-  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .error {
   color: red;
 }
-h1, h3, button {
-  text-align: center;
+.row {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
 }
-
+.btn-add {
+  width: 200px;
+  margin-bottom: 20px;
+}
 div.card {
   border: 1px solid #ccc;
-  float: left;
   width: 300px;
   height: 400px;
-  margin: 10px;
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 div.card:hover {
