--- a/frontend/src/components/styles/list.css
+++ b/frontend/src/components/styles/list.css
@@ -6,14 +6,24 @@
 .error {
   color: red;
 }
+h1 {
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+.btn {
+  width: 100x;
+}
+h3 {
+  margin: 10px;
+}
+.btn-add {
+  width: 200px;
+  margin: 20px;
+}
 .row {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-}
-.btn-add {
-  width: 200px;
-  margin-bottom: 20px;
 }
 div.card {
   border: 1px solid #ccc;
