--- a/frontend/src/components/styles/list.css
+++ b/frontend/src/components/styles/list.css
@@ -13,6 +13,8 @@ h1 {
 .btn {
   width: 40px;
   margin: 5px;
+  background-color: inherit;
+  border: none;
 }
 
 h3 {
@@ -21,6 +23,7 @@ h3 {
 .btn-add {
   width: 60px;
   margin: 20px;
+  color: green;
 }
 .row {
   display: flex;
@@ -56,7 +59,7 @@ div.card-info p {
 .card-actions {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
   box-shadow: 0 1px 2px 0 rgba(237, 205, 205, 0.2);
   transition: 0.3s;
   border-radius: 1px; /* 1px rounded corners */
