--- a/frontend/src/components/styles/list.css
+++ b/frontend/src/components/styles/list.css
@@ -10,12 +10,6 @@ h1 {
   margin-top: 15px;
   margin-bottom: 10px;
 }
-.btn {
-  width: 40px;
-  margin: 5px;
-  background-color: inherit;
-  border: none;
-}
 
 h3 {
   margin: 10px;
@@ -60,12 +54,16 @@ div.card-info p {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  box-shadow: 0 1px 2px 0 rgba(237, 205, 205, 0.2);
-  transition: 0.3s;
-  border-radius: 1px; /* 1px rounded corners */
-  text-align: center;
 }
-
+.btn {
+  width: 40px;
+  margin: 5px;
+  background-color: inherit;
+  border: none;
+}
+.btn:hover {
+  color:rgb(60, 126, 60);
+}
 /* Responsive columns - one column layout (vertical) on small screens */
 @media screen and (max-width: 600px) {
   .column {
