--- a/frontend/src/components/styles/list.css
+++ b/frontend/src/components/styles/list.css
@@ -1,17 +1,13 @@
-.page {
+/* .page {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+} */
 .error {
   color: red;
 }
-h1 {
-  margin-top: 15px;
-  margin-bottom: 10px;
-}
 
-h3 {
+/* h3 {
   margin: 10px;
 }
 .btn-add {
@@ -22,9 +18,9 @@ h3 {
   border: none;
 }
 .row {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
+  display: flex !important;
+  flex-flow: row wrap !important;
+  justify-content: center !important;
 }
 div.card {
   border: 1px solid #ccc;
@@ -46,7 +42,6 @@ div.card img {
 div.card-info {
   text-align: center;
 }
-
 div.card-info p {
   margin: 10px;
   text-align: left;
@@ -63,18 +58,9 @@ div.card-info p {
   background-color: inherit;
   border: none;
 }
-.btn-primary {
-  color: blue;
-}
-.btn-secondary {
-  color: gray;
-}
-.btn-danger {
-  color: rgb(221, 35, 14);
-}
 .btn:hover, .btn-add:hover {
   color:rgb(214, 128, 28);
-}
+} */
 /* Responsive columns - one column layout (vertical) on small screens */
 @media screen and (max-width: 600px) {
   .column {
