--- a/frontend/src/components/styles/list.css
+++ b/frontend/src/components/styles/list.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-} */
+}
 .error {
   color: red;
 }
 
-/* h3 {
+h3 {
   margin: 10px;
 }
 .btn-add {
@@ -21,6 +21,7 @@
   display: flex !important;
   flex-flow: row wrap !important;
   justify-content: center !important;
+  align-items: center;
 }
 div.card {
   border: 1px solid #ccc;
@@ -60,7 +61,7 @@ div.card-info p {
 }
 .btn:hover, .btn-add:hover {
   color:rgb(214, 128, 28);
-} */
+}*/
 /* Responsive columns - one column layout (vertical) on small screens */
 @media screen and (max-width: 600px) {
   .column {
