--- a/frontend/src/components/styles/list.css
+++ b/frontend/src/components/styles/list.css
@@ -1,4 +1,4 @@
-/* .page {
+/* /* /* .page {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,14 +33,14 @@ div.card {
 
 div.card:hover {
   border: 1px solid #777;
-}
+} */
 
-div.card img {
+/* img {
   width: 100%;
   height: 200px;
-}
+} */
 
-div.card-info {
+/* div.card-info {
   text-align: center;
 }
 div.card-info p {
@@ -61,11 +61,11 @@ div.card-info p {
 }
 .btn:hover, .btn-add:hover {
   color:rgb(214, 128, 28);
-}*/
+}*/ 
 /* Responsive columns - one column layout (vertical) on small screens */
-@media screen and (max-width: 600px) {
+/*@media screen and (max-width: 600px) {
   .column {
     width: 100%;
     margin-bottom: 20px;
   }
-}
+} */
