--- a/frontend/src/components/styles/list.css
+++ b/frontend/src/components/styles/list.css
@@ -1,3 +1,6 @@
+.App {
+  background-color: #f1eee7;
+}
 .error {
   color: red;
 }
@@ -5,6 +8,10 @@
 h1, h3 {
   margin: 15px;
   text-align: center;
+}
+
+.card:hover {
+  border: 1px solid #777;
 }
 
 /* .page {
