--- a/frontend/src/components/styles/program.css
+++ b/frontend/src/components/styles/program.css
@@ -1,3 +1,17 @@
 .card:hover {
   border: 1px solid #777;
 }
+
+.programView {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttonGroup {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items:flex-start;
+}
