--- a/frontend/src/components/styles/program.css
+++ b/frontend/src/components/styles/program.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items:flex-start;
+  align-items: center;
 }
 
 .programview .btn {
