To work on styling the Program form

--- a/frontend/src/components/styles/program.css
+++ b/frontend/src/components/styles/program.css
@@ -28,7 +28,7 @@ form {
 .form-actions {
   display: flex;
   flex-direction: row;
-  justify-content: right;
+  justify-content: center;
   align-items: center;
 }
 
