--- a/frontend/src/components/styles/program.css
+++ b/frontend/src/components/styles/program.css
@@ -4,20 +4,34 @@
 /* Below is CSS for program form*/
 .programForm {
   margin: auto;
-  width: 100%;
-  text-align: center;
+  width: 50%;
 }
+
+/* Create columns that float next to each other */
+.column {
+  float: left;
+}
+
+.column.left {
+  width: 25%;
+}
+
+.column.right {
+  width: 50%;
+}
+
+
 /* form {
   display: flex;
   flex-direction: column;
   align-items: left;
   text-align: left;
-}
+}*/
 
 .form-group {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  /* align-items: center; */
   margin: 10px
 }
 
@@ -25,17 +39,26 @@
 .form-actions button {
   margin: 5px;
 } 
-
+/*
 
 .form-actions {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-}
+}*/
 
 .form-input {
   display: flex;
   flex-direction: column;
-  align-items: left;
-} */
+  align-items: center;
+  height: auto;
+  width: 50%;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
